# PREDICT

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: arm_a_rl.toml  arm_a_sft.toml  arm_b_rl.toml  arm_b_sft.toml  chat_template.jinja  rl.toml  sft.toml  versions.toml
data/: README.md  __init__.py  arm_a_test.jsonl  arm_a_train.jsonl  arm_a_validation.jsonl  arm_b_test.jsonl  arm_b_train.jsonl  arm_b_validation.jsonl  assignments.json  manifest.json  prepare.py  recovery.py  validate.py
data/blueprints/mbpp_250/: solution.py
data/sft/arm_a/: train.jsonl
data/sft/arm_b/: train.jsonl
deploy/supervisor/: predict-arm-a.conf  predict-arm-b.conf
docs/: ARCHITECTURE.md  REPRODUCTION.md  agent_trace.md  blog.md  index.html  research_specs.md  stats.py
patches/: prime-rl-eos-loss-weight.patch  prime-rl-eos-token.patch  prime-rl-fail-on-truncation.patch  prime-rl-predict.patch  prime-rl-warn-on-truncation.patch
scripts/: evaluate.sh  setup.sh  train_rl.sh  train_rl_instance.sh  train_sft.sh
src/glyph/: __init__.py  chat.py  cli.py  harness.py  passk.py  prime_rl.py  program.py  taskset.py
tests/: test_chat.py  test_configs.py  test_data.py  test_passk.py  test_predict_algorithm.py  test_program.py  test_taskset.py
